<resources>
    <string name="app_name">Scholametric</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login_image">LoginImage</string>
    <string name="card_view_image">Card View Image</string>
    <string name="settings">Settings</string>
    <string name="send_to">Send To</string>
    <string name="to">To</string>
    <string name="message">Message</string>
    <string name="type_message_here">Type Message Here</string>
    <string name="send_email">Send Email</string>
    <string name="type_email_here">Type Email Here</string>
    <string name="send_sms">Send Sms</string>
    <string name="restore">Restore</string>
    <string name="backup">Backup</string>
    <string name="lesson_timetable">Lesson Timetable</string>
    <string name="exam_timetable">Exam Timetable</string>
    <string name="events">Events</string>
    <string name="add_another_event">Add Another Event</string>
    <string name="save_events">Save Events</string>
    <string name="subject">Subject</string>
    <string name="stream">Stream</string>
    <string name="textview_class">Class</string>
    <string name="accommodation">Accommodation</string>

    // this is a string array for the second activity card textviews
    <string-array name="actvity2card">
        <item>Student</item>
        <item>Teachers</item>
        <item>Health</item>
        <item>Accommodation</item>
        <item>Finance</item>
        <item>Entertainment</item>
        <item>Transport</item>
        <item>Assignment</item>
    </string-array>
    <string-array name="Sms_Spinner">
        <item>All</item>
        <item>Parents</item>
        <item>Students</item>
        <item>Prefects</item>
        <item>Class Teachers</item>
        <item>Teachers</item>
        <item>Class Monitors</item>
        <item>Fees Defaulters</item>
        <item>Requirements Defaulters</item>
        <item>Foreign Parents</item>
        <item>Foreign Students</item>
        <item>Old Students</item>
    </string-array>
    <string-array name="Email_spinner">
        <item>All</item>
        <item>Parents</item>
        <item>Students</item>
        <item>Prefects</item>
        <item>Class Teachers</item>
        <item>Teachers</item>
        <item>Class Monitors</item>
        <item>Fees Defaulters</item>
        <item>Requirements Defaulters</item>
        <item>Foreign Parents</item>
        <item>Foreign Students</item>
        <item>Old Students</item>
    </string-array>
    <string-array name="Class_spinner">
        <item>S1</item>
        <item>S2</item>
        <item>S3</item>
        <item>S3</item>
        <item>S4</item>
        <item>S5</item>
        <item>S6</item>
    </string-array>
    <string-array name="Stream_spinner">
        <item>Select a Stream</item>
    </string-array>
    <string-array name="Subjects_spinner">
        <item>Select A Subject</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact">Contact</string>
    <string name="staff_catergory">Staff Category</string>
    <string name="student_catergory">Student Category</string>
    <string name="class_settings">Class Settings</string>
    <string name="student_dormitory">Student Dormitory</string>
    <string name="exam_settings">Exam Settings</string>
    <string name="grades_olevel_settings">Grades OLevel </string>
    <string name="grades_alevel_settings">Grades ALevel</string>
    <string name="fees_structure">Fees Structure</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="staff_salaries">Staff Salaries</string>
    <string name="olevel_subjects">OLevel</string>
    <string name="alevel_subjects">Alevel</string>
    <string name="email_notification">Email</string>
    <string name="sms_notification">SMS</string>
    <string name="permissions">Permissions</string>
    <string name="all_users">All Users</string>
    <string name="allow_password_change_for_all_users">Allow Password Change for All users</string>
    <string name="students">Students</string>
    <string name="allow_students_to_view_other_students_data">Allow students to view other students data</string>
    <string name="teachers">Teachers</string>
    <string name="allow_teachers_to">Allow Teachers to</string>
    <string name="all_class_marks">All Class Marks</string>
    <string name="co_curricular_records">Co-curricular records</string>
    <string name="responsibilities">Responsibilities</string>
    <string name="all_sibling_data">All Sibling Data</string>
    <string name="save_settings">save settings</string>
    <string name="email_signature">Email Signature</string>
    <string name="academic_year">Academic Year</string>
    <string name="term_semester">Term / Semester</string>
    <string name="forever">Forever</string>
    <string name="store_internal_mail">Store Internal Mail</string>
    <string name="allow_attachments">Allow Attachments</string>
    <string name="attachments">Attachments</string>
    <string name="teachers_to_teachers">Teachers to Teachers</string>
    <string name="students_to_teachers">Students to Teachers</string>
    <string name="students_to_students">Students to Students</string>
    <string name="allow_internal_mail">Allow Internal mail</string>
    <string name="foreign_students">Foreign Students</string>
    <string name="all_old_students">All Old Students</string>
    <string name="foreign_parents_guardians">Foreign Parents/Guardians</string>
    <string name="other_requirements_defaulters">Other Requirements Defaulters</string>
    <string name="school_fees_defaulters">School Fees Defaulters</string>
    <string name="all_active_class_monitors">All Active Class Monitors</string>
    <string name="all_active_class_teachers">All Active Class Teachers</string>
    <string name="all_active_prefects">All Active Prefects</string>
    <string name="all_active_teachers">All Active Teachers</string>
    <string name="all_active_students">All Active Students</string>
    <string name="all_active_parents">All Active Parents</string>
    <string name="all_active_members">All Active Members</string>
    <string name="email_to_categories">Email to Categories</string>
    <string name="mid_term">MID TERM</string>
    <string name="bot">BOT</string>
    <string name="f9_mark">F9 Mark</string>
    <string name="p8_mark">P8 Mark</string>
    <string name="p7_mark">P7 Mark</string>
    <string name="c6_mark">C6 Mark</string>
    <string name="c5_mark">C5 Mark</string>
    <string name="c4_mark">C4 Mark</string>
    <string name="c3_mark">C3 Mark</string>
    <string name="d2_mark">D2 Mark</string>
    <string name="d1_mark">D1 Mark</string>
    <string name="a_mark">A Mark</string>
    <string name="b_mark">B Mark</string>
    <string name="c_mark">C Mark</string>
    <string name="d_mark">D Mark</string>
    <string name="e_mark">E Mark</string>
    <string name="f_mark">F Mark</string>
    <string name="o_mark">O Mark</string>
    <string name="comment">Comment</string>
    <string name="salary_scale_1">Salary Scale 1</string>
    <string name="salary_scale_2">Salary Scale 2</string>
    <string name="salary_scale_3">Salary Scale 3</string>
    <string name="salary_scale_4">Salary Scale 4</string>
    <string name="set_timetable">Set TimeTable</string>
    <string name="endtime">EndTime</string>
    <string name="starttime">StartTime</string>
    <string name="day">Day</string>
    <string name="lesson">Lesson</string>
</resources>
