<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.EmailFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:padding="4dp">
        <TextView
            android:id="@+id/txt_teachers"
            android:textAlignment="center"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_to_categories"
            android:textSize="24sp"/>

        <CheckBox
            android:id="@+id/checkbox_email_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/all_active_members"/>
        <CheckBox
            android:id="@+id/checkbox_email_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/all_active_parents"/>
        <CheckBox
            android:id="@+id/checkbox_email_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/all_active_students"/>
        <CheckBox
            android:id="@+id/checkbox_email_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/all_active_teachers"/>
        <CheckBox
            android:id="@+id/checkbox_email_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/all_active_prefects"/>
        <CheckBox
            android:id="@+id/checkbox_email_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/all_active_class_teachers"/>
        <CheckBox
            android:id="@+id/checkbox_email_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/all_active_class_monitors"/>
        <CheckBox
            android:id="@+id/checkbox_email_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/school_fees_defaulters"/>
        <CheckBox
            android:id="@+id/checkbox_email_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/other_requirements_defaulters"/>
        <CheckBox
            android:id="@+id/checkbox_email_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/foreign_parents_guardians"/>
        <CheckBox
            android:id="@+id/checkbox_sms_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/foreign_students"/>
        <CheckBox
            android:id="@+id/checkbox_sms_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/all_old_students"/>

        <TextView
            android:id="@+id/txt_allow_internal"
            android:textAlignment="center"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/allow_internal_mail"
            android:textSize="24sp"/>

        <CheckBox
            android:id="@+id/checkbox_email_btn_students"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/students_to_students"/>
        <CheckBox
            android:id="@+id/checkbox_email_teacher_to_students"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/students_to_teachers"/>
        <CheckBox
            android:id="@+id/checkbox_email_btn_teachers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/teachers_to_teachers"/>
        <TextView
            android:id="@+id/txt_attachments"
            android:textAlignment="center"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/attachments"
            android:textSize="24sp"/>

        <CheckBox
            android:id="@+id/checkbox_attachment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/allow_attachments"/>

        <TextView
            android:id="@+id/txt_store_internal_mail"
            android:textAlignment="center"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/store_internal_mail"
            android:textSize="24sp"/>
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/radio_email_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/forever"/>
                <RadioButton
                    android:id="@+id/radio_email_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/term_semester"/>
                <RadioButton
                    android:id="@+id/radio_email_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/academic_year"/>
            </RadioGroup>
        <TextView
            android:id="@+id/txt_email_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="@string/email_signature"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:id="@+id/edt_email_sign"/>

        <Button
            android:id="@+id/btn_save_settings_email_fragment"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:text="@string/save_settings"
            android:textSize="18sp"/>
    </LinearLayout>

</ScrollView>