<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="4dp"
    android:layout_margin="4dp"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Fragments.FeesStructureFragment">

    <LinearLayout
        android:layout_margin="2dp"
        android:padding="2dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textview_s1"
            android:text="@string/d1_mark"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <EditText
            android:id="@+id/edt_s1"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/textview_s2"
            android:text="@string/d2_mark"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <EditText
            android:id="@+id/edt_s2"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/textview_s3"
            android:text="@string/c3_mark"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <EditText
            android:id="@+id/edt_s3"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_height="40dp" />
        <TextView
            android:id="@+id/textview_s4"
            android:text="@string/c4_mark"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <EditText
            android:id="@+id/edt_s4"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_height="40dp" />

        <TextView
            android:id="@+id/textview_s5"
            android:text="@string/c5_mark"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <EditText
            android:id="@+id/edt_s5"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_height="40dp" />

        <TextView
            android:text="@string/c6_mark"
            android:textSize="18sp"
            android:textColor="#000"
            android:id="@+id/textview_s6"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <EditText
            android:id="@+id/edt_s6"
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:layout_height="40dp" />
        <Button
            android:id="@+id/btn_fees_structure_save_settings"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="18sp"
            android:textColor="#000"
            android:text="@string/save_settings"/>
    </LinearLayout>

</LinearLayout>