<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.Email">
    <LinearLayout
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_view_to"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/to"/>
        <Spinner
            android:id="@+id/spinner_email_to"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:hint="@string/send_to"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/text_view_message"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/message"/>
        <EditText
            android:id="@+id/edit_text_message"
            android:layout_margin="3dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:inputType="text"
            android:hint="@string/type_email_here"/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <Button
            android:id="@+id/button_email"
            android:layout_margin="1dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/send_email"/>

    </LinearLayout>

</LinearLayout>