<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="4dp"
    android:padding="4dp"
    android:layout_height="wrap_content"
    tools:context=".Fragments.StaffSalariesFragment">


    <LinearLayout
        android:layout_margin="2dp"
        android:padding="2dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textview_salary_scale_1"
            android:text="@string/salary_scale_1"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <EditText
            android:id="@+id/edt_salary_scale_1"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <TextView
            android:id="@+id/textview_salary_scale_2"
            android:text="@string/salary_scale_2"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <EditText
            android:id="@+id/edt_salary_scale_2"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <TextView
            android:id="@+id/textview_salary_scale_3"
            android:text="@string/salary_scale_3"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <EditText
            android:id="@+id/edt_salary_scale_3"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <TextView
            android:id="@+id/textview_salary_scale_4"
            android:text="@string/salary_scale_4"
            android:textSize="18sp"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
        <EditText
            android:id="@+id/edt_salary_scale_4"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/btn_save_settings_staff_salaries"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textSize="18sp"
            android:textColor="#000"
            android:text="@string/save_settings"/>
    </LinearLayout>

</ScrollView>