<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".Permissions">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_permissions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        android:background="?colorPrimaryDark">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?actionBarSize"
            android:padding="2dp"
            android:weightSum="100">

            <ImageView
                android:id="@+id/toolbar_permissions_image_view"
                android:layout_width="71dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="20"
                android:src="@drawable/ic_arrow_back_black_24dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/toolbar_permissions_text_view"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textAlignment="center"
                android:layout_weight="50"
                android:text="@string/permissions"
                android:textColor="#fff"
                android:textSize="24sp" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textSize="24sp"
                    android:textColor="#000"
                    android:textAlignment="center"
                    android:id="@+id/txt_view_allusers"
                    android:text="@string/all_users"/>
                <CheckBox
                    android:id="@+id/checkbox_permissions_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/allow_password_change_for_all_users"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="2dp">
                <TextView
                    android:id="@+id/txt_students"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#000"
                    android:text="@string/students"
                    android:textAlignment="center"
                    android:textSize="24sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textSize="20sp"
                    android:id="@+id/txt_allow_students"
                    android:text="@string/allow_students_to_view_other_students_data"/>
                <CheckBox
                    android:id="@+id/checkbox_permissions_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/all_class_marks"/>
                <CheckBox
                    android:id="@+id/checkbox_permissions_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/co_curricular_records"/>
                <CheckBox
                    android:id="@+id/checkbox_permissions_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/responsibilities"/>
                <CheckBox
                    android:id="@+id/checkbox_permissions_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/all_sibling_data"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:padding="2dp">
                <TextView
                    android:id="@+id/txt_teachers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:text="@string/teachers"
                    android:textSize="24sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:textSize="20sp"
                    android:id="@+id/txt_allow_teachers"
                    android:text="@string/allow_teachers_to"/>
                <CheckBox
                    android:id="@+id/checkbox_permissions_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/all_class_marks"/>
                <CheckBox
                    android:id="@+id/checkbox_permissions_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/co_curricular_records"/>
                <CheckBox
                    android:id="@+id/checkbox_permissions_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/responsibilities"/>
                <CheckBox
                    android:id="@+id/checkbox_permissions_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/all_sibling_data"/>
                <CheckBox
                    android:id="@+id/checkbox_permissions_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/co_curricular_records"/>
                <CheckBox
                    android:id="@+id/checkbox_permissions_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/responsibilities"/>
                <CheckBox
                    android:id="@+id/checkbox_permissions_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/all_sibling_data"/>
            </LinearLayout>
            <Button
                android:id="@+id/btn_save_settings_permissions"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginBottom="100dp"
                android:text="@string/save_settings"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>